# Creox4

./: AUTHORS  BUGS  CMakeLists.txt  COPYING  ChangeLog  FindJACK.cmake  INSTALL  Makefile.am  Makefile.am.in  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  configure  configure.in  configure.in.in  creox.kdevprj  creox.lsm  creox.spec  libtool  subdirs
creox/: CMakeLists.txt  Makefile.am  Makefile.in  audioprefs.cpp  audioprefs.h  audioprefs.ui  control.h  crbutton.cpp  crbutton.h  crchainbutton.cpp  crchainbutton.h  crchainpopupmenu.cpp  crchainpopupmenu.h  crchainview.cpp  crchainview.h  creox.cpp  creox.desktop  creox.h  creox.kcfg  creox4.kcfg  creoxui.rc  croptionsdialog.cpp  croptionsdialog.h  crsplashscreen.cpp  crsplashscreen.h  crthreadeventdispatcher.cpp  crthreadeventdispatcher.h  main.cpp  privilegesswitcher.cpp  privilegesswitcher.h  settings.kcfgc
creox/cr_lib/: CMakeLists.txt  Makefile.am  Makefile.in  crdatastream.cpp  crdatastream.h  creffectgui.cpp  creffectgui.h  creffectguitray.cpp  creffectguitray.h  crexception.h  crfloatspinbox.cpp  crfloatspinbox.h  crsliderarray.cpp  crsliderarray.h  crvalidator.cpp  crvalidator.h  soundprocessor.cpp  soundprocessor.h
creox/dsp_flow/: CMakeLists.txt  Makefile.am  Makefile.in  effectkeeper.cpp  effectkeeper.h  threadeffector.cpp  threadeffector.h
creox/effects_dsp/: CMakeLists.txt  Makefile.am  Makefile.in  distortionprocessor.cpp  distortionprocessor.h  echoprocessor.cpp  echoprocessor.h  flangerprocessor.cpp  flangerprocessor.h  phaserprocessor.cpp  phaserprocessor.h  tremoloprocessor.cpp  tremoloprocessor.h
creox/effects_gui/: CMakeLists.txt  Makefile.am  Makefile.in  crdistortion.cpp  crdistortion.h  crecho.cpp  crecho.h  crechotapsview.cpp  crechotapsview.h  crflanger.cpp  crflanger.h  crphaser.cpp  crphaser.h  crtremolo.cpp  crtremolo.h
creox/pics/: CMakeLists.txt  Makefile.am  Makefile.in
creox/preset/: CMakeLists.txt  Makefile.am  Makefile.in  crnewpresetfolderdialog.cpp  crnewpresetfolderdialog.h  crnewpresetfolderdialog.moc  crnewpresetfolderdialogimpl.cpp  crnewpresetfolderdialogimpl.h  crpresetpopupmenu.cpp  crpresetpopupmenu.h  crpresetview.cpp  crpresetview.h  crpresetviewitem.cpp  crpresetviewitem.h  crsavenewpresetdialog.cpp  crsavenewpresetdialog.h  effectpreset.cpp  effectpreset.h  preset.data
creox/templates/: cpp_template  header_template
doc/: CMakeLists.txt  Makefile.in  index.docbook
doc/en/: CMakeLists.txt  Makefile.am  Makefile.in  index.docbook
pics/: CMakeLists.txt
po/: CMakeLists.txt  Makefile.in  creox.pot  ru.gmo
po/ru/: CMakeLists.txt  creox.po
