####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libeffects_dsp.a

## INCLUDES were found outside kdevelop specific part

libeffects_dsp_a_METASOURCES = AUTO

libeffects_dsp_a_SOURCES = tremoloprocessor.cpp phaserprocessor.cpp flangerprocessor.cpp echoprocessor.cpp distortionprocessor.cpp 


EXTRA_DIST = distortionprocessor.cpp distortionprocessor.h echoprocessor.cpp echoprocessor.h flangerprocessor.cpp flangerprocessor.h phaserprocessor.cpp phaserprocessor.h tremoloprocessor.cpp tremoloprocessor.h 

####### kdevelop will overwrite this part!!! (end)############
INCLUDES = $(all_includes) -I$(top_srcdir)/creox -I$(top_srcdir)/creox/cr_lib
