####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libeffects_gui.a

## INCLUDES were found outside kdevelop specific part

libeffects_gui_a_METASOURCES = AUTO

libeffects_gui_a_SOURCES = crtremolo.cpp crphaser.cpp crflanger.cpp crechotapsview.cpp crecho.cpp crdistortion.cpp 


EXTRA_DIST = crdistortion.cpp crdistortion.h crecho.cpp crecho.h crechotapsview.cpp crechotapsview.h crflanger.cpp crflanger.h crphaser.cpp crphaser.h crtremolo.cpp crtremolo.h 

####### kdevelop will overwrite this part!!! (end)############
INCLUDES = $(all_includes) -I$(top_srcdir)/creox -I$(top_srcdir)/creox/cr_lib -I$(top_srcdir)/creox/effects_dsp
